--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
       "target": "ES6",
       "module": "commonjs",
+      "outDir": "./dist",                     // Output directory for compiled files
+      "rootDir": "./src",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true
